# openai-agents-sdk-practice

./: abcd.py  ek_or_error.py  example.py  example_01.py  fake_event_hook.py  information.md  model_behavior_error.py  pyproject.toml  testing.py  testingg.py  todo_list.txt
2_Intermediate/: model_settings.py
Agents/: agent_output_schema.py  agent_pattern.py  cloning_agent.py  gemini_model.py  guardrails.py  handsoff.py  main.py  output_type.py  tools.py
Custom_runner/: __init__.py  advance_runner.py  handsoff.py  hello_world.py  input_guadrails.py  output_guadrails.py  run.py  tool_call.py
Experiments/: agent_lifecycle.py  agent_tool_use_tracker.py  context_without_tool.py  forcing_llm_for_many_things.py  guardrail.py  handsoff_function.py  handsoff_invoke.py  maybe_reset_tool_choice.py  model_provider.py  multi_level_handsoff.py  own_guadrails.py  parallel_execution.py  return_type_int.py  run_input_guardrail_by_your_own.py  strict_json_schema.py  test.py  testing_hooks_params.py  tool_invoke.py
Extras/: assert_in_python.py  asyncio_task.py  await_unique_behavior.py  awaitable.py  cast_in_python.py  co_variant.py  deep_copy_and_shallow_copy.py  function_overloading.py  origin_in_typing.py  same_keys_in_dict.py  some_dunder_methods.py  type_adapter.py  typying_examples.py
Markdown/: Intermediate.md  basics.md
Overview/: converter.py  streaming_events.py
Prompt_Engineering/: swe_bench_verified.py
Pydantic/: basemodel.py  field.py
Results/: final_output.py  final_output_as.py  guardrail_results.py  input.py  input_for_the_next_turn.py  last_agent.py  (+1 more)
(+173 files in other folders)
